[package]
name = "base_server"
version = "0.1.0"
authors = ["lcdr"]
edition = "2018"
license = "AGPL-3.0-or-later"
repository = "https://github.com/lcdr/base_server/"

[features]
default = ["tls"]

tls = ["rustls", "webpki", "webpki-roots"]

[dependencies]
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
rustls = { version = "0.16.0", optional = true }
webpki = { version = "0.21.2", optional = true }
webpki-roots = { version = "0.18.0", optional = true }
endio = { git = "https://github.com/lcdr/endio", rev = "9981948f5cb6d78dba3c5115d1f3459918a64133" }
lu_packets = { git = "https://github.com/lcdr/lu_packets", rev = "f11fdd7d50109602f7abdeacf78452376b9adbde" }
